--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cheerio": "^1.0.0-rc.3",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "mongoose": "^5.8.7",
     "nodemon": "^2.0.2",
     "request": "^2.88.0"
   }
