add express async support

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chromedriver": "^83.0.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "mongoose": "^5.8.7",
     "nightmare": "^3.0.2",
     "nodemon": "^2.0.2",
