--- a/package.json
+++ b/package.json
@@ -14,13 +14,28 @@
     "axios": "^0.19.0",
     "cheerio": "^1.0.0-rc.3",
     "chromedriver": "^83.0.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "mongoose": "^5.8.7",
+    "morgan": "^1.10.0",
     "nightmare": "^3.0.2",
     "nodemon": "^2.0.2",
     "request": "^2.88.0",
     "selenium-webdriver": "^4.0.0-alpha.7"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.2",
+    "eslint-plugin-react-hooks": "^4.1.2",
+    "prettier": "^2.1.2"
   }
 }
