--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "nightmare": "^3.0.2",
     "nodemon": "^2.0.2",
+    "puppeteer": "^5.3.1",
     "request": "^2.88.0",
     "selenium-webdriver": "^4.0.0-alpha.7"
   },
