--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "aniscrape": "^0.1.1",
     "aniscrape-kissanime": "^0.1.0",
     "axios": "^0.19.0",
+    "bcrypt": "^5.0.0",
     "cheerio": "^1.0.0-rc.3",
     "chromedriver": "^83.0.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
     "morgan": "^1.10.0",
     "nightmare": "^3.0.2",
