--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aniscrape": "^0.1.1",
-    "aniscrape-kissanime": "^0.1.0",
     "axios": "^0.19.0",
     "bcrypt": "^5.0.0",
     "cheerio": "^1.0.0-rc.3",
@@ -22,10 +20,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.7",
     "morgan": "^1.10.0",
-    "nightmare": "^3.0.2",
     "nodemon": "^2.0.2",
     "puppeteer": "^5.3.1",
-    "request": "^2.88.0",
     "selenium-webdriver": "^4.0.0-alpha.7"
   },
   "devDependencies": {
@@ -39,6 +35,21 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-react-hooks": "^4.1.2",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.4.0",
     "prettier": "^2.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,css,json,ejs,md}": [
+      "prettier --write"
+    ],
+    "*.js": [
+      "eslint --fix"
+    ]
   }
 }
