--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --timeout 20000 --exit"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^4.2.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "commander": "^6.1.0",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.12.0",
