--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,6 +1,7 @@
 {
   "name": "webapp",
   "version": "0.1.0",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
@@ -10,9 +11,12 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/node": "^12.0.0",
+    "@types/react-router-dom": "^5.1.6",
+    "axios": "^0.21.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "typescript": "~3.7.2"
   },
