--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.0",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -42,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@types/node-sass": "^4.11.1",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8"
