--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "mocha --timeout 20000 --exit"
+    "test": "mocha --timeout 20000 --exit",
+    "start": "node app.js",
+    "heroku-postbuild": "cd webapp && npm install --only=dev && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +23,7 @@
     "mongoose": "^5.8.7",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.2",
+    "path": "^0.12.7",
     "puppeteer": "^5.3.1",
     "selenium-webdriver": "^4.0.0-alpha.7"
   },
@@ -56,5 +59,8 @@
     "*.js": [
       "eslint --fix"
     ]
+  },
+  "engines": {
+    "node": "12.18.1"
   }
 }
