--- a/webapp/package.json
+++ b/webapp/package.json
@@ -25,12 +25,12 @@
   "homepage": "./",
   "main": "src/electron.js",
   "scripts": {
-    "react-start": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron": "electron .",
-    "start": "nf start -p 3000"
+    "dev": "nf start -p 3000"
   },
   "eslintConfig": {
     "extends": "react-app"
