--- a/webapp/package.json
+++ b/webapp/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.0.0",
     "@types/react-router-dom": "^5.1.6",
     "axios": "^0.21.0",
+    "buffer-from": "^1.1.1",
     "concat-stream": "^2.0.0",
     "js-cookie": "^2.2.1",
     "net": "^1.0.2",
