--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "mocha --timeout 20000 --exit",
-    "start": "node app.js",
-    "heroku-postbuild": "cd webapp && npm install --only=dev && npm install && npm run build"
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
