--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webapp",
   "version": "0.1.0",
-  "proxy": "https://manga-webapp.herokuapp.com",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
