--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,6 @@
   base = "/webapp"
   
 [[redirects]]
-  from = "/api/*"
-  to = "https://manga-webapp.herokuapp.com/:splat"
+  from = "/*"
+  to = "/index.html"
   status = 200
